[project]
name = "raging"
version = "0.1.0"
description = "Implementations of various RAG techniques"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain-openai>=0.2.12",
    "langchain>=0.3.11",
    "pypdf>=5.1.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
